# x-app-clone-railway

./: .env.dev  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
register_e_login/: admin.py  apps.py
register_e_login/migrations/: 0001_initial.py  0002_post_image.py  0002_profile.py  0003_alter_post_options_follow.py  0003_remove_post_image.py  0004_alter_like_post_alter_like_user.py  0005_alter_like_post_alter_like_user.py  0006_post_post_likes.py  0007_post_image.py
register_e_login/models/: __init__.py  comment.py  follow.py  like.py  login.py  post.py  profile.py  register.py
register_e_login/serializers/: __init__.py  comment_serializer.py  like_serializer.py  login_serializer.py  post_serializer.py  profile_serializer.py  register_serializer.py  user_serializer.py  userwithprofile_serializer.py
register_e_login/views/: __init__.py  follow_user.py  home_view.py  inicio_view.py  login_view.py  profile_view.py  register_view.py  update_user_name_view.py
static/js/: action.js  like.js
static/styles/: edit.css  global.css  home.css  perfil.css
staticfiles/styles/: home.css  inicio.css  login.css  register.css
templates/: edit_post.html  home.html  inicio.html  login.html  perfil.html  signup.html  user_profile.html
x_app_web/: asgi.py  settings.py  urls.py  wsgi.py
